--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "pg": "^8.11.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.3",
     "@types/pg": "^8.10.2",
