--- a/server/package.json
+++ b/server/package.json
@@ -15,11 +15,13 @@
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.1",
     "pg": "^8.11.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.4.3",
     "@types/pg": "^8.10.2",
     "nodemon": "^3.0.1",
