--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.1",
     "pg": "^8.11.1"
   },
