--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "server",
+  "name": "audiophile-e-commerce-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "An Express server for an e-commerce website",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.ts",
-    "start": "ts-node src/index.ts",
+    "build": "tsc -p tsconfig-build.json",
+    "dev": "docker-compose -f docker-compose.dev.yml up --build",
+    "dev-stop": "docker-compose -f docker-compose.dev.yml down",
+    "debug": "nodemon --watch \"src/**/*.{ts,js}\" -e ts,js --exec node --inspect=0.0.0.0:9229 -r ts-node/register src/index.ts",
+    "start": "node dist/index.js",
     "test": "NODE_ENV=test jest"
   },
   "keywords": [],
-  "author": "",
+  "author": "Ben Eatock",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
