--- a/server/docker-compose.dev.yml
+++ b/server/docker-compose.dev.yml
@@ -25,6 +25,7 @@ services:
       - "${DB_HOST_PORT}:${DB_PORT}"
     volumes:
       - data:/var/lib/postgresql/data
+      - ./sql/init.sql:/docker-entrypoint-initdb.d/init.sql
     environment:
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_DB=${DB_NAME}
