--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,12 @@
     "@types/node": "^20.4.3",
     "@types/pg": "^8.10.2",
     "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
+    "eslint": "^8.45.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-import": "^2.27.5",
     "http-errors": "^2.0.0",
     "jest": "^29.6.1",
     "nodemon": "^3.0.1",
