--- a/server/docker-compose.dev.yml
+++ b/server/docker-compose.dev.yml
@@ -12,6 +12,23 @@ services:
     environment:
       - SERVER_PORT=${PORT}
       - NODE_ENV=development
+      - CI
+      - HOST
+      - PORT
+      - DB_HOST
+      - DB_PORT
+      - DB_HOST_PORT
+      - DB_USER
+      - DB_PASSWORD
+      - DB_NAME
+      - TEST_DB_HOST
+      - TEST_DB_NAME
+      - TEST_DB_HOST_PORT
+      - DEV_DB_HOST
+      - DEV_DB_NAME
+      - DEV_DB_HOST_PORT
+      - JWT_SECRET
+      - SESSION_SECRET
     working_dir: /app
     volumes:
       - ./:/app
