Give sudo permissions to yarn install

--- a/.github/workflows/backend-ci-deploy.yml
+++ b/.github/workflows/backend-ci-deploy.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Build TypeScript
         run: |
           cd server
-          yarn install --frozen-lockfile
+          sudo yarn install --frozen-lockfile
           yarn build
 
       - name: Install Fly CLI
