Fix fly path in deploy action

--- a/.github/workflows/backend-ci-deploy.yml
+++ b/.github/workflows/backend-ci-deploy.yml
@@ -60,7 +60,7 @@ jobs:
       - name: Install Fly CLI
         run: |
           curl -L https://fly.io/install.sh | sh
-          echo "$PATH:home/runner/.fly/bin" >> $GITHUB_PATH
+          echo "/home/runner/.fly/bin" >> $GITHUB_PATH
 
       - name: Deploy to Fly
         run: |
