Set NODE_ENV to production in prod

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,6 +2,8 @@ FROM node:18-alpine
 
 WORKDIR /app
 
+ENV NODE_ENV=production
+
 # Copy only the /dist folder and package.json, yarn.lock
 COPY ./dist ./dist
 COPY package*.json ./
