--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "tailwindcss-animate": "^1.0.6"
   },
   "devDependencies": {
+    "@total-typescript/ts-reset": "^0.4.2",
     "@types/node": "^20.5.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
