--- a/.github/workflows/frontent-deploy-to-pages.yml
+++ b/.github/workflows/frontent-deploy-to-pages.yml
@@ -26,6 +26,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Change to client directory
+        run: cd client
       - name: Set up Node
         uses: actions/setup-node@v3
         with:
