--- a/.github/workflows/frontent-deploy-to-pages.yml
+++ b/.github/workflows/frontent-deploy-to-pages.yml
@@ -26,18 +26,18 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Change to client directory
-        run: cd client
       - name: Install dependencies
         run: yarn install
+        working-directory: ./client
       - name: Build
         run: yarn build
+        working-directory: ./client
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
         uses: actions/upload-artifact@v1
         with:
-          path: "./dist"
+          path: "./client/dist"
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
