--- a/.github/workflows/frontent-deploy-to-pages.yml
+++ b/.github/workflows/frontent-deploy-to-pages.yml
@@ -37,6 +37,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
+          name: github-pages
           path: "./client/dist"
       - name: Deploy to GitHub Pages
         id: deployment
