--- a/.github/workflows/frontent-deploy-to-pages.yml
+++ b/.github/workflows/frontent-deploy-to-pages.yml
@@ -26,6 +26,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: CD into client
+        run: cd client
+      - name: Set up Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: "18"
+          cache: "yarn"
       - name: Install dependencies
         run: yarn install
         working-directory: ./client
@@ -35,10 +42,10 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v1
         with:
           name: github-pages
           path: "./client/dist"
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v1
