--- a/.github/workflows/frontent-deploy-to-pages.yml
+++ b/.github/workflows/frontent-deploy-to-pages.yml
@@ -41,10 +41,9 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-pages-artifact@v2
         with:
-          name: github-pages
           path: "./client/dist"
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v1
+        uses: actions/deploy-pages@v2
