--- a/server/package.json
+++ b/server/package.json
@@ -32,7 +32,8 @@
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.11.1"
+    "pg": "^8.11.1",
+    "stripe": "^13.3.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
